--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.10",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
+    "react-modal-video": "^1.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "sass": "^1.50.1",
     "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
