--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.6.10",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
     "react-modal-video": "^1.2.8",
