--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
+    "@zoomus/websdk": "^2.4.5",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
