--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
