--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-awesome-slider": "^4.1.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.3",
     "react-modal-video": "^1.2.8",
@@ -28,6 +29,7 @@
     "sass": "^1.52.2",
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.17",
+    "swiper": "^8.3.2",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
