--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-awesome-slider": "^4.1.0",
     "react-countup": "^6.3.0",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.31.3",
     "react-modal-video": "^1.2.8",
     "react-router-dom": "^6.3.0",
